nuevas empresas + añadidos carrousel

--- a/index.html
+++ b/index.html
@@ -66,10 +66,13 @@
     <div id="productos-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" id="carousel-item-1" data-bs-interval="3000">
-            <img src="assets/imagenes/main/carousel/main-carousel-img1.png" data-interval="1000" class="d-block w-100" alt="...">
+            <a href="paginas/tienda/autos.html"><img src="assets/imagenes/main/carousel/main-carousel-img1.png" data-interval="1000" class="d-block w-100" alt="..."></a>
           </div>
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="assets/imagenes/main/carousel/main-carousel-img2.png" class="d-block w-100" alt="...">
+            <a href="paginas/tienda/autos.html"><img src="assets/imagenes/main/carousel/main-carousel-img2.png" class="d-block w-100" alt="..."></a>
+          </div>
+          <div class="carousel-item" data-bs-interval="3000">
+            <a href="paginas/tienda/autos.html"><img src="assets/imagenes/main/carousel/main-carousel-img3.png" class="d-block w-100" alt="..."></a>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#productos-carousel" data-bs-slide="prev">
@@ -108,11 +111,32 @@
             <p id="comp-related__companies--p3" >Marca alemana de autos de lujo conocida por su diseño elegante, alto rendimiento y tecnología innovadora. Sus vehículos están enfocados en ofrecer una experiencia de conducción premium, con potentes motores, tracción en las cuatro ruedas (quattro) y una excelente calidad de construcción. Audi se destaca por incorporar tecnologías de vanguardia, como sistemas avanzados de asistencia al conductor, pantallas digitales y opciones de motorización eléctrica. La marca ofrece una amplia gama de modelos, desde sedanes deportivos hasta SUVs y coches de alto rendimiento, siempre priorizando la comodidad, la seguridad y el estilo.</p>
         </div>
         <div class="comp-related__companies">
-            <div id="comp-related__companies--logo2"> 
+            <div id="comp-related__companies--logo4"> 
                 <img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Fiat-logo.png" alt="">
             </div>
             <h3 id="comp-related__companies--t4" >FIAT</h3>
             <p id="comp-related__companies--p4" >Marca italiana de automóviles conocida por su enfoque en vehículos prácticos, económicos y de diseño funcional. Sus autos se destacan por ser compactos, ideales para el uso urbano, con modelos icónicos como el Fiat 500, que combina estilo retro con tecnología moderna. Fiat ofrece opciones eficientes en consumo de combustible y accesibles, manteniendo un equilibrio entre calidad y precio. Además, la marca ha ampliado su gama con SUVs y vehículos familiares, adaptándose a diferentes estilos de vida, siempre con un diseño distintivo y soluciones prácticas para el día a día.</p>
+        </div>
+        <div class="comp-related__companies">
+            <div id="comp-related__companies--logo5"> 
+                <img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Renault-logo.png" alt="">
+            </div>
+            <h3 id="comp-related__companies--t5" >RENAULT</h3>
+            <p id="comp-related__companies--p5" >Marca francesa destacada por su diseño moderno, accesibilidad y versatilidad. Ofrece una amplia gama de vehículos, desde modelos compactos ideales para la ciudad hasta SUVs y opciones eléctricas innovadoras. Renault se caracteriza por incorporar tecnología avanzada en conectividad, seguridad y eficiencia, asegurando una experiencia de conducción confiable y cómoda. Además, su compromiso con la movilidad sostenible lo posiciona como un referente en el desarrollo de autos eléctricos.</p>
+        </div>
+        <div class="comp-related__companies">
+            <div id="comp-related__companies--logo6"> 
+                <img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Ford-logo.png" alt="">
+            </div>
+            <h3 id="comp-related__companies--t6" >FORD</h3>
+            <p id="comp-related__companies--p6" >Marca estadounidense reconocida por su innovación, durabilidad y una amplia gama de vehículos. Ofrece desde autos compactos y SUVs hasta camionetas robustas como la icónica Ford F-150. La marca se destaca por integrar tecnología avanzada en conectividad, asistencia al conductor y eficiencia energética. Además, Ford apuesta por la sostenibilidad con su línea de vehículos eléctricos e híbridos, sin dejar de lado su legado de rendimiento y confiabilidad.</p>
+        </div>
+        <div class="comp-related__companies">
+            <div id="comp-related__companies--logo7"> 
+                <img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Nissan-logo.png" alt="">
+            </div>
+            <h3 id="comp-related__companies--t7" >NISSAN</h3>
+            <p id="comp-related__companies--p7" >Marca japonesa reconocida por su confiabilidad, tecnología y diseño versátil. Su gama de vehículos incluye desde autos compactos y económicos hasta SUVs, camionetas y opciones eléctricas como el Nissan LEAF. La marca se distingue por integrar tecnología avanzada, como sistemas de asistencia al conductor y conectividad, priorizando la seguridad y la comodidad. Además, Nissan apuesta por la innovación sostenible, enfocándose en el desarrollo de vehículos eléctricos y soluciones ecológicas.</p>
         </div>
     </section>
 
