--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -9,10 +9,11 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="../../css/main.css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../assets/imagenes/logo/logo.png">
     <title>Venta De Autos - Drive & Dream</title>
 </head>
 <body>
@@ -54,21 +55,19 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
-                <!------>
-                <div class="search-icon" onclick="toggleSearch()">
-                    🔍
-                </div>
-                <div id="search-screen" class="search-screen">
-                    <div class="search-container">
-                        <input type="text" id="search-input" placeholder="Buscar por clase..." oninput="filterDivs()">
-                        <button onclick="toggleSearch()">Cerrar</button>
-                    </div>
-                </div>
             </div>
         </nav>
     </header>
     <main id="tieAut__Main">
+        <div class="body-">
+            <div class="contenedorBusqueda">
+                <input type="text" placeholder="Buscar..." id="search-input" oninput="filterDivs()">
+                <div class="botonBusqueda">
+                    <!-- Ícono de búsqueda como un carácter Unicode -->
+                    <span><i class="fa fa-search"></i></span>
+                </div>
+            </div>
+        </div>
         <div id="tieAut__Grid" class="main-content">     
             <div class="tieAut__grid--marcas honda" id="honda">
                 <h2>Honda</h2>
