--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                 <a class="nav-link mx-lg-2" href="paginas/cliente.html" target="_blank">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="paginas/VentaAuto.html" target="_blank">Productos</a>
+                                <a class="nav-link mx-lg-2" href="paginas/tienda/autos.html" target="_blank">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2" href="#">Ubicación</a>
