Reescritura en Chevrolet y prueba de subir videos

--- a/paginas/tienda/autos-productos/1Chevrolet/prod-3.html
+++ b/paginas/tienda/autos-productos/1Chevrolet/prod-3.html
@@ -155,24 +155,26 @@
             <div class="prods__masInfo">
                 <table>
                     <tr>
-                        <td>Puertas:</td>
-                        <td>Valvulas: </td>
-                        <td>Capacidad de tanque: </td>
+                        <td>Puertas: 5</td>
+                        <td>Valvulas: 8</td>
+                        <td>Capacidad de tanque: 54</td>
                     </tr>
                     <tr>
-                        <td>Potencia: </td>
-                        <td>Colores: </td>
-                        <td>Posavasos: </td>
+                        <td>Potencia: 98 CV</td>
+                        <td>Colores: Blanco, Gris, Negro, Rojo, Azul</td>
+                        <td>Posavasos: Si</td>
                     </tr>
                     <tr>
-                        <td>Alto: </td>
-                        <td>Ancho:</td>
-                        <td>Largo:</td>
+                        <td>Alto: 1,477 mm</td>
+                        <td>Ancho: 1,964 mm </td>
+                        <td>Largo: 4,275 mm
+
+                        </td>
                     </tr>
                 </table>
                 <h4>Prueba de manejo</h4>
                 <video controls>
-                    <source src="../../../../assets/videos/prods/chevrolet/Chevrolet Cruze RS.mp4" type="video/mp4">
+                    <source src="../../../../assets/videos/prods/chevrolet/Chevrolet Onix Joy Plus.mp4" type="video/mp4">
                 </video>   
             </div>
         </details>
