--- a/paginas/tienda/autos-productos/1Chevrolet/prod-1.html
+++ b/paginas/tienda/autos-productos/1Chevrolet/prod-1.html
@@ -171,19 +171,19 @@
             <div class="prods__masInfo">
                 <table>
                     <tr>
-                        <td>Puertas:</td>
-                        <td>Valvulas: </td>
-                        <td>Capacidad de tanque: </td>
+                        <td>Puertas: 5</td>
+                        <td>Valvulas: 16</td>
+                        <td>Capacidad de tanque: 52L</td>
                     </tr>
                     <tr>
-                        <td>Potencia: </td>
-                        <td>Colores: </td>
-                        <td>Posavasos: </td>
+                        <td>Potencia: 153 CV</td>
+                        <td>Colores: Rojo, Blanco, Gris, Negro</td>
+                        <td>Posavasos: Si</td>
                     </tr>
                     <tr>
-                        <td>Alto: </td>
-                        <td>Ancho:</td>
-                        <td>Largo:</td>
+                        <td>Alto: 1.484 mm</td>
+                        <td>Ancho: 1.807 mm</td>
+                        <td>Largo: 4.448 mm</td>
                     </tr>
                 </table>
                 <h4>Prueba de manejo</h4>
