--- a/paginas/tienda/autos.html
+++ b/paginas/tienda/autos.html
@@ -59,19 +59,50 @@
         </nav>
     </header>
     <main id="tieAut__Main">
-        <div class="body-">
-            <div class="contenedorBusqueda">
-                <input type="text" placeholder="Buscar..." id="search-input" oninput="filterDivs()">
-                <div class="botonBusqueda">
-                    <!-- Ícono de búsqueda como un carácter Unicode -->
-                    <span><i class="fa fa-search"></i></span>
+        <div id="cosasJS">
+            <div class="body-">
+                <div class="contenedorBusqueda">
+                    <input type="text" placeholder="Buscar..." id="search-input" oninput="filterDivs()">
+                    <div class="botonBusqueda">
+                        <!-- Ícono de búsqueda como un carácter Unicode -->
+                        <span><i class="fa fa-search"></i></span>
+                    </div>
+                </div>
+            </div>
+            <div id="filtros">
+                <button id="toggleSidebar" class="open-btn">☰</button>
+
+                <div id="sidebar" class="sidebar">
+                    <button id="closeSidebar" class="close-btn">✖</button>
+                    <h2>Filtros</h2>
+                    <div class="filter">
+                        <span>Categoría A</span>
+                        <label class="toggle">
+                            <input type="checkbox" class="filter-toggle" data-filter="category-a" checked>
+                            <span class="slider"></span>
+                        </label>
+                    </div>
+                    <div class="filter">
+                        <span>Categoría B</span>
+                        <label class="toggle">
+                            <input type="checkbox" class="filter-toggle" data-filter="category-b" checked>
+                            <span class="slider"></span>
+                        </label>
+                    </div>
+                    <div class="filter">
+                        <span>Categoría C</span>
+                        <label class="toggle">
+                            <input type="checkbox" class="filter-toggle" data-filter="category-c" checked>
+                            <span class="slider"></span>
+                        </label>
+                    </div>
                 </div>
             </div>
         </div>
         <div id="tieAut__Grid" class="main-content">     
             <div class="tieAut__grid--marcas honda" id="honda">
                 <h2>Honda</h2>
-                <div id="honda1"><a href="autos-productos/2Honda/prod-1.html">
+                <div id="honda1" class="autos"><a href="autos-productos/2Honda/prod-1.html">
                     <div id="hondaImg1">
                         <img src="../../assets/imagenes/tienda/autos/hondaZR-V.jpg" alt="">
                     </div>
