--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                                 <a class="nav-link mx-lg-2 active" aria-current="page" id="menu-current-page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="#">Nosotros</a>
+                                <a class="nav-link mx-lg-2" href="paginas/nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="paginas/cliente.html" target="_blank">Contacto</a>
+                                <a class="nav-link mx-lg-2" href="paginas/cliente.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="paginas/tienda/autos.html" target="_blank">Productos</a>
+                                <a class="nav-link mx-lg-2" href="paginas/tienda/autos.html">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2" href="#">Ubicación</a>
@@ -89,51 +89,51 @@
 
         <div class="comp-related__companies">
             <div id="comp-related__companies--logo1"> 
-                <img src="assets/imagenes/main/empresas-relacionadas/Chevrolet-logo.png" alt="">
+                <a href="https://www.chevrolet.com.ar/" target="_blank"><img src="assets/imagenes/main/empresas-relacionadas/Chevrolet-logo.png" alt=""></a>
             </div>
             <h3 id="comp-related__companies--t1" >CHEVROLET</h3>
             <p id="comp-related__companies--p1" >Una de las marcas de automóviles más reconocidas a nivel mundial, destacada por ofrecer una amplia variedad de vehículos que combinan tecnología, rendimiento y diseño accesible. Los autos Chevrolet están diseñados para responder a diversas necesidades de los conductores, desde modelos compactos y eficientes en consumo de combustible hasta SUVs y camionetas de gran capacidad. La marca es conocida por su enfoque en la seguridad y la innovación, integrando tecnologías como sistemas avanzados de asistencia al conductor, conectividad a través de pantalla táctil y opciones de conectividad móvil.</p>
         </div>
             
         <div class="comp-related__companies">
-            <div id="comp-related__companies--logo2"> 
-                <img id="comp-related__img2" src="assets/imagenes/main/empresas-relacionadas/Honda-logo.png" alt="">
+            <div id="comp-related__companies--logo2">
+                <a href="https://www.honda.com.ar/" target="_blank"><img id="comp-related__img2" src="assets/imagenes/main/empresas-relacionadas/Honda-logo.png" alt=""></a>
             </div>
             <h3 id="comp-related__companies--t2" >HONDA</h3>
             <p id="comp-related__companies--p2" >Marca japonesa reconocida por fabricar vehículos confiables, eficientes y con un enfoque en la tecnología avanzada. Su gama de autos incluye desde modelos compactos y económicos hasta SUVs y sedanes de mayor tamaño. Honda es conocida por la durabilidad de sus motores y la eficiencia de combustible, lo que la convierte en una opción popular entre los conductores que buscan vehículos de bajo mantenimiento. Además, la marca integra innovaciones como sistemas de seguridad avanzados, opciones híbridas y tecnologías de conectividad para mejorar la experiencia de conducción.</p>
         </div>
 
         <div class="comp-related__companies">
-            <div id="comp-related__companies--logo3"> 
-                <img id="comp-related__img3" src="assets/imagenes/main/empresas-relacionadas/Audi-logo.png" alt="">
+            <div id="comp-related__companies--logo3">
+                <a href="https://www.audi.com.ar/ar/web/es.html" target="_blank"><img id="comp-related__img3" src="assets/imagenes/main/empresas-relacionadas/Audi-logo.png" alt=""></a>
             </div>
             <h3 id="comp-related__companies--t3" >AUDI</h3>
             <p id="comp-related__companies--p3" >Marca alemana de autos de lujo conocida por su diseño elegante, alto rendimiento y tecnología innovadora. Sus vehículos están enfocados en ofrecer una experiencia de conducción premium, con potentes motores, tracción en las cuatro ruedas (quattro) y una excelente calidad de construcción. Audi se destaca por incorporar tecnologías de vanguardia, como sistemas avanzados de asistencia al conductor, pantallas digitales y opciones de motorización eléctrica. La marca ofrece una amplia gama de modelos, desde sedanes deportivos hasta SUVs y coches de alto rendimiento, siempre priorizando la comodidad, la seguridad y el estilo.</p>
         </div>
         <div class="comp-related__companies">
-            <div id="comp-related__companies--logo4"> 
-                <img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Fiat-logo.png" alt="">
+            <div id="comp-related__companies--logo4">
+                <a href="https://www.fiat.com.ar/" target="_blank"><img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Fiat-logo.png" alt=""></a>
             </div>
             <h3 id="comp-related__companies--t4" >FIAT</h3>
             <p id="comp-related__companies--p4" >Marca italiana de automóviles conocida por su enfoque en vehículos prácticos, económicos y de diseño funcional. Sus autos se destacan por ser compactos, ideales para el uso urbano, con modelos icónicos como el Fiat 500, que combina estilo retro con tecnología moderna. Fiat ofrece opciones eficientes en consumo de combustible y accesibles, manteniendo un equilibrio entre calidad y precio. Además, la marca ha ampliado su gama con SUVs y vehículos familiares, adaptándose a diferentes estilos de vida, siempre con un diseño distintivo y soluciones prácticas para el día a día.</p>
         </div>
         <div class="comp-related__companies">
-            <div id="comp-related__companies--logo5"> 
-                <img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Renault-logo.png" alt="">
+            <div id="comp-related__companies--logo5">
+                <a href="https://www.renault.com.ar/" target="_blank"><img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Renault-logo.png" alt=""></a>
             </div>
             <h3 id="comp-related__companies--t5" >RENAULT</h3>
             <p id="comp-related__companies--p5" >Marca francesa destacada por su diseño moderno, accesibilidad y versatilidad. Ofrece una amplia gama de vehículos, desde modelos compactos ideales para la ciudad hasta SUVs y opciones eléctricas innovadoras. Renault se caracteriza por incorporar tecnología avanzada en conectividad, seguridad y eficiencia, asegurando una experiencia de conducción confiable y cómoda. Además, su compromiso con la movilidad sostenible lo posiciona como un referente en el desarrollo de autos eléctricos.</p>
         </div>
         <div class="comp-related__companies">
-            <div id="comp-related__companies--logo6"> 
-                <img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Ford-logo.png" alt="">
+            <div id="comp-related__companies--logo6">
+                <a href="https://www.ford.com.ar/" target="_blank"><img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Ford-logo.png" alt=""></a>
             </div>
             <h3 id="comp-related__companies--t6" >FORD</h3>
             <p id="comp-related__companies--p6" >Marca estadounidense reconocida por su innovación, durabilidad y una amplia gama de vehículos. Ofrece desde autos compactos y SUVs hasta camionetas robustas como la icónica Ford F-150. La marca se destaca por integrar tecnología avanzada en conectividad, asistencia al conductor y eficiencia energética. Además, Ford apuesta por la sostenibilidad con su línea de vehículos eléctricos e híbridos, sin dejar de lado su legado de rendimiento y confiabilidad.</p>
         </div>
         <div class="comp-related__companies">
             <div id="comp-related__companies--logo7"> 
-                <img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Nissan-logo.png" alt="">
+                <a href="https://www.nissan.com.ar/" target="_blank"><img id="comp-related__img4" src="assets/imagenes/main/empresas-relacionadas/Nissan-logo.png" alt=""></a>
             </div>
             <h3 id="comp-related__companies--t7" >NISSAN</h3>
             <p id="comp-related__companies--p7" >Marca japonesa reconocida por su confiabilidad, tecnología y diseño versátil. Su gama de vehículos incluye desde autos compactos y económicos hasta SUVs, camionetas y opciones eléctricas como el Nissan LEAF. La marca se distingue por integrar tecnología avanzada, como sistemas de asistencia al conductor y conectividad, priorizando la seguridad y la comodidad. Además, Nissan apuesta por la innovación sostenible, enfocándose en el desarrollo de vehículos eléctricos y soluciones ecológicas.</p>
