--- a/paginas/cliente.html
+++ b/paginas/cliente.html
@@ -27,16 +27,16 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2 active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link mx-lg-2" href="../index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="#">Nosotros</a>
+                                <a class="nav-link mx-lg-2" href="paginas/nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="#">Contacto</a>
+                                <a class="nav-link mx-lg-2 active" aria-current="page" href="../paginas/cliente.html">Contacto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link mx-lg-2" href="">Productos</a>
+                                <a class="nav-link mx-lg-2" href="../paginas/tienda/autos.html">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link mx-lg-2" href="#">Ubicación</a>
