--- a/paginas/tienda/autos-productos/2Honda/prod-1.html
+++ b/paginas/tienda/autos-productos/2Honda/prod-1.html
@@ -200,24 +200,24 @@
             <div class="prods__masInfo">
                 <table>
                     <tr>
-                        <td>Puertas:</td>
-                        <td>Valvulas: </td>
-                        <td>Capacidad de tanque: </td>
+                        <td>Puertas:5</td>
+                        <td>Valvulas: 16</td>
+                        <td>Capacidad de tanque: 57L</td>
                     </tr>
                     <tr>
-                        <td>Potencia: </td>
-                        <td>Colores: </td>
-                        <td>Posavasos: </td>
+                        <td>Potencia: 157 CV</td>
+                        <td>Colores: Blanco, Gris</td>
+                        <td>Posavasos: Si</td>
                     </tr>
                     <tr>
-                        <td>Alto: </td>
-                        <td>Ancho:</td>
-                        <td>Largo:</td>
+                        <td>Alto: 1.620 mm</td>
+                        <td>Ancho: 1.840 mm</td>
+                        <td>Largo: 4.568 mm</td>
                     </tr>
                 </table>
                 <h4>Prueba de manejo</h4>
                 <video controls>
-                    <source src="../../../../assets/videos/prods/chevrolet/Chevrolet Cruze RS.mp4" type="video/mp4">
+                    <source src="../../../../assets/videos/prods/honda/Honda ZR-V.mp4" type="video/mp4">
                 </video>   
             </div>
         </details>
