Audi terminado (Faltan videos)

--- a/paginas/tienda/autos-productos/3Audi/prod-1.html
+++ b/paginas/tienda/autos-productos/3Audi/prod-1.html
@@ -158,7 +158,7 @@
         </div>
 
         <div class="row prods__descripcion">
-            <p>Honda traslada todos los atributos del popular Civic al segmento de los SUV compactos con el nuevo ZR-V. Disponible únicamente con mecánica híbrida, el Honda ZR-V está llamado a ser un triunfador en la gama del fabricante nipón.</p>
+            <p>El Audi A4 allroad es un vehículo derivado del A4 Avant que se caracteriza por su diseño off-road y sus modificaciones para circular en terrenos difíciles.</p>
         </div>
 
         <details class="prods__btnVerMas">
@@ -166,24 +166,24 @@
             <div class="prods__masInfo">
                 <table>
                     <tr>
-                        <td>Puertas:</td>
-                        <td>Valvulas: </td>
-                        <td>Capacidad de tanque: </td>
+                        <td>Puertas: 5</td>
+                        <td>Valvulas: 16</td>
+                        <td>Capacidad de tanque: 58L</td>
                     </tr>
                     <tr>
-                        <td>Potencia: </td>
-                        <td>Colores: </td>
-                        <td>Posavasos: </td>
+                        <td>Potencia: 150 CV</td>
+                        <td>Colores: Blanco, Gris, Azul</td>
+                        <td>Posavasos: Si</td>
                     </tr>
                     <tr>
-                        <td>Alto: </td>
-                        <td>Ancho:</td>
-                        <td>Largo:</td>
+                        <td>Alto: 1.493 mm</td>
+                        <td>Ancho: 1.847 mm</td>
+                        <td>Largo: 4.762 mm</td>
                     </tr>
                 </table>
                 <h4>Prueba de manejo</h4>
                 <video controls>
-                    <source src="../../../../assets/videos/prods/chevrolet/Chevrolet Cruze RS.mp4" type="video/mp4">
+                    <source src="../../../../assets/videos/prods/audi/Audi A4 All Road.mp4" type="video/mp4">
                 </video>   
             </div>
         </details>
