--- a/paginas/tienda/autos-productos/3Audi/prod-2.html
+++ b/paginas/tienda/autos-productos/3Audi/prod-2.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../../../../assets/imagenes/logo/logo.png">
-    <title>Honda ZR-V</title>
+    <title>Audi A6 Sedán</title>
 </head>
 <body>
     <header>
@@ -65,76 +65,35 @@
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="6" aria-label="Slide 7"></button>
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="7" aria-label="Slide 8"></button>
                     <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="8" aria-label="Slide 9"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="9" aria-label="Slide 10"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="10" aria-label="Slide 11"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="11" aria-label="Slide 12"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="12" aria-label="Slide 13"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="13" aria-label="Slide 14"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="14" aria-label="Slide 15"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="15" aria-label="Slide 16"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="16" aria-label="Slide 17"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="17" aria-label="Slide 18"></button>
-                    <button type="button" data-bs-target="#prod_1Car" data-bs-slide-to="18" aria-label="Slide 19"></button>
                 </div>
                 <div class="carousel-inner prods__carrusel-cont">
                     <div class="carousel-item active">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img1.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/3Audi/prod-3-2/img1.webp" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img2.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/3Audi/prod-3-2/img2.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img3.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/3Audi/prod-3-2/img3.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img4.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/3Audi/prod-3-2/img4.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img5.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/3Audi/prod-3-2/img5.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img6.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/3Audi/prod-3-2/img6.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img7.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/3Audi/prod-3-2/img7.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img8.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/3Audi/prod-3-2/img8.jpg" class="d-block w-100" alt=":/">
                     </div>
                     <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img9.webp" class="d-block w-100" alt=":/">
+                        <img src="../../../../assets/imagenes/prods/3Audi/prod-3-2/img9.jpg" class="d-block w-100" alt=":/">
                     </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img10.webp" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img11.webp" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img12.webp" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img13.webp" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img14.webp" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img15.webp" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img16.webp" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img17.webp" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img18.webp" class="d-block w-100" alt=":/">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../../../../assets/imagenes/prods/2Honda/prod-2-1/img19.webp" class="d-block w-100" alt=":/">
-                    </div>
-
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#prod_1Car" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -150,11 +109,11 @@
                 <div class="prods__volver">
                     <a href="../autos.html">Volver</a>
                 </div>
-                <h2>Honda ZR-V</h2>
+                <h2>Audi A6 Sedán</h2>
                 <table>
                     <tr>
                         <td>|Modelo:</td>
-                        <td class="prods__dato">2024</td>
+                        <td class="prods__dato">2017</td>
                     </tr>
                     <tr>
                         <td>|Traccion:</td>
@@ -162,7 +121,7 @@
                     </tr>
                     <tr>
                         <td>|Caja:</td>
-                        <td class="prods__dato">Manual</td>
+                        <td class="prods__dato">Automatica</td>
                     </tr>
                     <tr>
                         <td>|Combustible:</td>
@@ -170,11 +129,11 @@
                     </tr>
                     <tr>
                         <td>|Condicion:</td>
-                        <td class="prods__dato">Nuevo</td>
+                        <td class="prods__dato">Usado</td>
                     </tr>
                     <tr>
                         <td>|Kilometraje:</td>
-                        <td class="prods__dato">0Km</td>
+                        <td class="prods__dato">66.000Km</td>
                     </tr>
                     <tr>
                         <td>|Cilindrada</td>
@@ -192,7 +151,7 @@
         </div>
 
         <div class="row prods__descripcion">
-            <p>Honda traslada todos los atributos del popular Civic al segmento de los SUV compactos con el nuevo ZR-V. Disponible únicamente con mecánica híbrida, el Honda ZR-V está llamado a ser un triunfador en la gama del fabricante nipón.</p>
+            <p>Un modelo con novedades concebidas con visión de futuro y la digitalización puesta en práctica. Un concepto de uso innovador, un amplio trabajo y una gran oferta de sistemas de asistencia a la conducción para mejorar la seguridad y el confort. Una versión mejorada para marcar nuevos estándares en la gama alta.</p>
         </div>
         
         <details class="prods__btnVerMas">
@@ -200,24 +159,24 @@
             <div class="prods__masInfo">
                 <table>
                     <tr>
-                        <td>Puertas:</td>
-                        <td>Valvulas: </td>
-                        <td>Capacidad de tanque: </td>
+                        <td>Puertas: 5</td>
+                        <td>Valvulas: 16</td>
+                        <td>Capacidad de tanque: 75L</td>
                     </tr>
                     <tr>
-                        <td>Potencia: </td>
-                        <td>Colores: </td>
-                        <td>Posavasos: </td>
+                        <td>Potencia: 140CV</td>
+                        <td>Colores: Gris, Negro, Azul</td>
+                        <td>Posavasos: Si</td>
                     </tr>
                     <tr>
-                        <td>Alto: </td>
-                        <td>Ancho:</td>
-                        <td>Largo:</td>
+                        <td>Alto: 1.411 mm</td>
+                        <td>Ancho: 1.886 mm</td>
+                        <td>Largo: 4.939 mm</td>
                     </tr>
                 </table>
                 <h4>Prueba de manejo</h4>
                 <video controls>
-                    <source src="../../../../assets/videos/prods/chevrolet/Chevrolet Cruze RS.mp4" type="video/mp4">
+                    <source src="../../../../assets/videos/prods/audi/Audi A6.mp4" type="video/mp4">
                 </video>   
             </div>
         </details>
