pagina de mauro chill de cojones

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../css/main.css">
 </head>
 <body id="cuerpo">
-  <header>
+  <header id="header-nosotros">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand me-auto" href="#">
@@ -50,73 +50,69 @@
     </nav>
   </header>
   <section id="sobre-nosotros">
-    <div class="contenedor">
-      <h2 class="titulo">Sobre Nosotros</h2>
-      <p class="eslogan">"Tu próximo vehículo, nuestra pasión"</p>
-      
-      <!-- Historia de la empresa -->
-      <div class="historia">
-        <h3>Nuestra Historia</h3>
+    <div id="sobre-nosotros__titulo">
+      <h2>Sobre Nosotros</h2>
+      <p>"Tu próximo vehículo, nuestra pasión"</p>
+    </div>
+
+    <div id="sobre-nosotros__historia">
+      <h3>Nuestra Historia</h3>
+      <p>Desde nuestra fundación en 2010, hemos evolucionado de un pequeño negocio familiar a una concesionaria líder en el sector automotriz. Nos enorgullece ofrecer a nuestros clientes una experiencia de compra personalizada, con un enfoque en calidad, innovación y compromiso.</p>
+    </div>
+    
+    <div id="sobre-nosotros__mision-vision">
+      <div>
+        <h3>Misión</h3>
         <p>
-          Desde nuestra fundación en 2010, hemos evolucionado de un pequeño negocio familiar a una concesionaria líder en el sector automotriz. Nos enorgullece ofrecer a nuestros clientes una experiencia de compra personalizada, con un enfoque en calidad, innovación y compromiso.
+          Proveer a nuestros clientes vehículos confiables y de última tecnología, acompañados de un servicio excepcional que supere sus expectativas.
         </p>
       </div>
-
-      <!-- Misión y Visión -->
-      <div class="mision-vision">
-        <div class="mision">
-          <h3>Misión</h3>
-          <p>
-            Proveer a nuestros clientes vehículos confiables y de última tecnología, acompañados de un servicio excepcional que supere sus expectativas.
-          </p>
-        </div>
-        <div class="vision">
-          <h3>Visión</h3>
-          <p>
-            Convertirnos en la concesionaria de referencia en nuestra región, destacándonos por nuestra innovación, ética y compromiso con la sostenibilidad.
-          </p>
-        </div>
+      <div>
+        <h3>Visión</h3>
+        <p>
+          Convertirnos en la concesionaria de referencia en nuestra región, destacándonos por nuestra innovación, ética y compromiso con la sostenibilidad.
+        </p>
       </div>
+    </div>
 
-      <!-- Tipos de vehículos -->
-      <div class="vehiculos">
-        <h3>Nuestros Vehículos</h3>
-        <ul>
-          <li>Autos Sedán</li>
-          <li>Camionetas SUV</li>
-          <li>Vehículos Comerciales</li>
-          <li>Autos Eléctricos e Híbridos</li>
-        </ul>
-      </div>
+    <!-- Tipos de vehículos -->
+    <div id="sobre-nosotros__vehiculos">
+      <h3>Nuestros Vehículos</h3>
+      <ul>
+        <li>Autos Sedán</li>
+        <li>Camionetas SUV</li>
+        <li>Vehículos Comerciales</li>
+        <li>Autos Eléctricos e Híbridos</li>
+      </ul>
+    </div>
 
-      <!-- Logros y cifras -->
-      <div class="logros">
-        <h3>Logros Destacados</h3>
-        <div class="cifras">
-          <div class="cifra">
-            <h4>10+</h4>
-            <p>Años de experiencia</p>
-          </div>
-          <div class="cifra">
-            <h4>5,000+</h4>
-            <p>Clientes satisfechos</p>
-          </div>
-          <div class="cifra">
-            <h4>1,000+</h4>
-            <p>Vehículos vendidos</p>
-          </div>
-          <div class="cifra">
-            <h4>50+</h4>
-            <p>Reconocimientos en la industria</p>
-          </div>
+    <!-- Logros y cifras -->
+    <div id="sobre-nosotros__logros">
+      <h3>Logros Destacados</h3>
+      <div class="sobre-nosotros__logros--cifras">
+        <div class="cifra">
+          <h4>10+</h4>
+          <p>Años de experiencia</p>
+        </div>
+        <div class="cifra">
+          <h4>5,000+</h4>
+          <p>Clientes satisfechos</p>
+        </div>
+        <div class="cifra">
+          <h4>1,000+</h4>
+          <p>Vehículos vendidos</p>
+        </div>
+        <div class="cifra">
+          <h4>50+</h4>
+          <p>Reconocimientos en la industria</p>
         </div>
       </div>
+    </div>
 
-      <!-- Equipo -->
-      <div class="equipo">
-        <h3>Conoce a Nuestro Equipo</h3>
-        <p>Detrás de cada éxito, hay un equipo dedicado y apasionado.</p>
-      </div>
+    <!-- Equipo -->
+    <div class="equipo">
+      <h3>Conoce a Nuestro Equipo</h3>
+      <p>Detrás de cada éxito, hay un equipo dedicado y apasionado.</p>
     </div>
   </section>
   <footer>
